--- a/exampleUI/medias/example.css
+++ b/exampleUI/medias/example.css
@@ -1,3 +1,18 @@
+body
+{
+	background-color: #2c3e50;
+}
+.svy-label
+{
+	Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.body_main
+{
+	width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+	background-color: #fff;
+}
 .svy-label.banner-orange
 {
 	border: solid #ff8000;
@@ -6,8 +21,23 @@
 
 .svy-label.banner
 {
-	font-family: sans-serif Arial "Helvetica Neue";
 	font-size: 30px;
 	font-style: oblique;
 	font-stretch: wider;
+}
+
+.svy-field
+{
+	font-size: 14px;
+}
+.svy-combobox
+{
+	font-size: 14px;
+}
+
+.ui-grid-row-selected div.ui-grid-cell
+{
+	background-color: #DEF !important;
+	color: #222;
+	font-weight: bold;
 }
