Initial commit of SideNav Example Solution
- sidenav solution
- updates to data model module
- updates to ui module

--- a/exampleUI/medias/example.css
+++ b/exampleUI/medias/example.css
@@ -4,7 +4,8 @@ body
 }
 .svy-label
 {
-	Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 11pt;
 }
 .body_main
 {
@@ -40,4 +41,49 @@ body
 	background-color: #DEF !important;
 	color: #222;
 	font-weight: bold;
+}
+
+.label_header_3
+{
+	font-weight: bold;
+	padding-left: 12px;
+	color: #008040;
+	background-color: #c2e7c4;
+	font-size: 12pt;
+	border-radius: 4px;
+}
+.label_header_2
+{
+	font-weight: bold;
+	padding-left: 12px;
+	color: #005177;
+	background-color: #eee;
+	font-size: 12pt;
+	border-radius: 4px;
+}
+.label_header_1
+{
+	font-weight: bold;
+	padding-left: 12px;
+	color: #fff;
+	background-color: #5a96e1;
+	font-size: 16pt;
+	border-radius: 4px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.tabpanel-border
+{
+	border: 1px solid #eee;
+}
+.font-icon
+{
+	font-size: 16px;
+	text-align: center;
+	color: #aaa;
+	transition: .25s;
+}
+.font-icon:HOVER
+{
+	color: #e77509;
 }
