--- a/exampleUI/medias/example.css
+++ b/exampleUI/medias/example.css
@@ -1,4 +1,4 @@
-body
+.svy-main-window-container
 {
 	background-color: #2c3e50;
 }
@@ -70,6 +70,25 @@ body
 	font-size: 16pt;
 	border-radius: 4px;
 	padding-left: 20px;
+	padding-right: 20px;
+}
+.label_header_4
+{
+	font-weight: bold;
+	padding-left: 12px;
+	color: #2c3e50;
+	background-color: #fff;
+	font-size: 16pt;
+}
+.label_info_panel
+{
+	color: #444;
+	background-color: #fafafa;
+	border: 1px solid #e0e0e0;
+	border-radius: 6px;
+	padding-left: 20px;
+	margin-top: 20px;
+	padding-bottom: 20px;
 	padding-right: 20px;
 }
 .tabpanel-border
