Changed row coloring

--- a/exampleSvyExtraTable/medias/svyExtraTable.css
+++ b/exampleSvyExtraTable/medias/svyExtraTable.css
@@ -31,3 +31,7 @@
 	color: red;
 	font-weight: bold;
 }
+
+.table-striped > tbody > tr.table-servoyextra-selected {
+    background-color: #CCCCFF;
+}
