Refactor Main Base form & CSS

--- a/sideNavExample/medias/side-nav.css
+++ b/sideNavExample/medias/side-nav.css
@@ -1,5 +1,4 @@
-@IMPORT url("example.css");
-
+/*
 .svy-sidenav-menu {
 	font-size: 14px;
 	line-height: 36px;
@@ -70,6 +69,7 @@
 {
 	color: #e77509;
 }
+*/
 .welcome
 {
 	font-size: 24px;
